Fix text wrapping in assignment viewer & allow download links

--- a/css-src/assignment-viewer.css
+++ b/css-src/assignment-viewer.css
@@ -76,6 +76,10 @@
   background-color: var(--color-code-darkest);
 }
 
+.assignment-header h2 {
+  padding-right: 3.6em;
+}
+
 .assignment-sub-header {
   background-color: var(--color-code-darkest);
 }
